Add GetCurrentRoutes() to MediaRouter API, ensure dialog has routes at init

This CL adds a method to the MediaRouter interface to get the current media
routes synchronously. We call this if MediaRouterUI hasn't observed routes
updates yet when the dialog WebUI asks for initial data, to ensure that WebUI
has routes information at initialization.

BUG=667361

Review-Url: https://codereview.chromium.org/2540773005
Cr-Commit-Position: refs/heads/master@{#436366}

Former-commit-id: 21ad18d7d165fe60792c5c5e3c56b0647324c03c